[gd_scene load_steps=4 format=3 uid="uid://bn3asyl3o2i63"]

[ext_resource type="Script" uid="uid://dchp2kgb22jjp" path="res://utils/ui/fancy_button.gd" id="1_ndw33"]
[ext_resource type="AudioStream" uid="uid://8yia1vrgv0c8" path="res://utils/ui/over2.wav" id="2_ny30c"]
[ext_resource type="AudioStream" uid="uid://t2ilkwk3toul" path="res://utils/ui/pressed.wav" id="3_ac72r"]

[node name="FancyButton" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ndw33")

[node name="OverStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ny30c")
bus = &"SFX"

[node name="PressedStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ac72r")
bus = &"SFX"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
